# draft_together

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  shell.nix
back/: Cargo.toml
back/client/src/: main.rs
back/data/src/: lib.rs
back/postgres/: init_db.sql
back/server/: Cargo.toml
back/server/src/: community_data.rs  database.rs  league_data.rs  main.rs  ws.rs
client/: Cargo.toml
client/src/: main.rs
data/: Cargo.toml
data/src/: lib.rs
front/: .prettierignore  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
front/components/: BansTeam.vue  ChampionRole.vue  ChampionRoles.vue  ChampionTeam.vue  ChampionsSelector.vue  ChampionsTeam.vue  DraftFooter.vue  DraftHeader.vue  ImageButton.vue  LinkButton.vue  SearchInput.vue
front/components/icons/: CopyImage.vue  CopyLink.vue  PositionBottom.vue  PositionJungle.vue  PositionMid.vue  PositionSupport.vue  PositionTop.vue
front/pages/: index.vue
front/pages/[[draft_id]]/: index.vue
front/server/: champion.ts  draft.ts
postgres/: init_db.sql
prod/back/: Dockerfile
prod/front/: Dockerfile
server/: Cargo.toml
server/src/: database.rs  league_data.rs  main.rs  ws.rs
src/: main.rs
