[workspace]
members = ["client", "data", "server"]

[workspace.dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
axum-extra = "0.9.4"
dashmap = "6.1.0"
flate2 = "1.0.34"
futures = "0.3.31"
futures-util = "0.3.31"
headers = "0.4"
reqwest = { version = "0.12.8", default-features = false }
semver = "1.0.23"
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = { version = "0.8.2" }
tokio = { version = "1.41.0", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tar = { version = "0.4.42", default-features = false }
thiserror = "1.0.65"
tokio-tungstenite = "0.24.0"
tower-http = "0.6.1"
uuid = "1.11.0"
