[package]
name = "draft_together_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
futures = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
headers = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
